<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3EB489"
    android:orientation="vertical"
    tools:context=".EditUser">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/editSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:minHeight="48dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit your profile photo"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/editImageViewPhoto"
            android:layout_width="90dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="Choose photo from gallery"
            android:scaleType="centerInside"
            android:src="@drawable/baseline_add_box_24" />

    </LinearLayout>

    <Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#246EE9"
        android:text="Edit data"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#246EE9" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#246EE9"
        android:text="Delete data"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#246EE9" />

</LinearLayout>