<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3EB489"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/enterId"
        android:layout_width="147dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:autofillHints="1"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/instance_1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:background="#246EE9"
        android:text="@string/edit"
        android:textColor="#FFFFFF"
        app:backgroundTint="#246EE9"
        app:layout_constraintStart_toEndOf="@+id/enterId"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:background="#246EE9"
        android:text="@string/remove"
        app:backgroundTint="#246EE9"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="215dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/sort_by"
        android:entries="@array/sort_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:background="#246EE9"
        android:text="@string/insert_user"
        app:backgroundTint="#246EE9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="16dp"
        android:background="#246EE9"
        android:text="@string/wipeout_user"
        app:backgroundTint="#246EE9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame"
        android:background="@drawable/layout_border"
        android:layout_width="409dp"
        android:layout_height="457dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.428">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="409dp"
            android:layout_height="455dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>